--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/kamula/japa/issues"
   },
-  "homepage": "https://github.com/kamula/japa#readme"
+  "homepage": "https://github.com/kamula/japa#readme",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
